# rlm-explorer

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yaml  pyproject.toml
.claude/skills/results/: SKILL.md
configs/: default.yaml
data/questions/: eval_set.json  hard_eval_set.json
scripts/: run_eval.py  setup_corpus.py  setup_musique.py  viewer.py
scripts/templates/: viewer.html
src/env/: corpus.py  document_env.py  repl.py  reward.py  tools.py
src/eval/: harness.py  report.py  scorer.py
src/policies/: claude_policy.py  naive_rag.py  single_shot.py  stuffing.py
tests/: test_corpus.py  test_env.py  test_repl.py  test_reward.py
